# meuform

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/core/: answer.rs  condition.rs  customer.rs  form.rs  graph.rs  mod.rs  screen.rs
backend/src/data/: auth_customer.rs  back_answer.rs  create_customer.rs  delete_form.rs  list_answers.rs  mod.rs  next_answer.rs  start_form.rs  update_customer.rs  update_form.rs  update_graph.rs
backend/src/infra/crypto/: mod.rs
backend/src/infra/database/: answer.rs  graph.rs  mod.rs  mongo.rs
backend/src/protocols/: mod.rs
backend/src/protocols/crypto/: hasher.rs
backend/src/protocols/database/: answer.rs  customer.rs  form.rs  graph.rs  mod.rs
backend/src/protocols/graph/: edge_validator.rs  graph_topology.rs
backend/src/repository/: answer.rs  customer.rs  form.rs  graph.rs  mod.rs
backend/src/usecase/: auth_customer.rs  back_answer.rs  create_form.rs  delete_customer.rs  delete_form.rs  get_answer.rs  get_customer.rs  get_form.rs  get_screen.rs  list_answers.rs  list_forms.rs  mod.rs  next_answer.rs  start_form.rs  submit_answer.rs  update_customer.rs  update_form.rs  update_graph.rs
crates/infra/: Cargo.toml
crates/infra/src/: crypto.rs  repository.rs
crates/infra/src/crypto/: hasher.rs  tokenizer.rs
crates/infra/src/repository/: customer.rs  flow.rs  form.rs  mod.rs  mongo.rs  submission.rs
crates/presentation/: Cargo.toml  teste.txt
crates/presentation/src/: lib.rs  main.rs
crates/presentation/src/auth/: controller.rs  types.rs
crates/presentation/src/customer/: controller.rs  mod.rs  types.rs
crates/presentation/src/protocols/: controller.rs  mod.rs  request.rs  response.rs
src/: main.rs
src/core/: answer.rs  (+2 more)
(+162 files in other folders)
