[package]
name = "meuform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
