[package]
name = "infra"
version = "0.1.0"
edition = "2024"


[dependencies]
domain = { path = "../domain" }
protocols = { path = "../protocols" }
async-trait = "0.1.89"
mongodb = "3.3.0"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3.31"
