[package]
name = "presentation"
version = "0.1.0"
edition = "2024"


[dependencies]
domain = { path = "../domain" }
usecases = { path = "../usecases" }
anyhow = "1.0.99"
async-trait = "0.1.89"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
axum = "0.8.4"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
